--- a/OperatorAssistantBot.Domain/OperatorAssistantBot.Domain.csproj
+++ b/OperatorAssistantBot.Domain/OperatorAssistantBot.Domain.csproj
@@ -14,4 +14,25 @@
     <PackageReference Include="Telegram.Bot" Version="18.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="OperatorAssistantBot">
+      <HintPath>..\OperatorAssistantBot\bin\Debug\net6.0\OperatorAssistantBot.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\i18n\Strings.Designer.cs">
+      <DependentUpon>Strings.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\i18n\Strings.resx">
+      <LastGenOutput>Strings.Designer.cs</LastGenOutput>
+      <Generator>ResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
